# openvino_work

./: CMakeCache.txt  README.md  faces_gallery.json
Notebooks/: attribute_detection_production.ipynb  check_distance_utility_with_mouse.ipynb  cross_road_Testing.ipynb  directories_structure.xml  dynamic_batching.ipynb  face_SORT_tracker.ipynb  gulabjamun.ipynb  image_classifcation_aggregation_tool.py  intersection functions CV.ipynb  keras2tensorflow_openvino.ipynb  keras_to_tensorflow.py  openvino_Faster_RCNN.ipynb  openvino_head_upper_body.ipynb  openvino_helmet_detection.ipynb  openvino_retinanet.ipynb  person_detection.ipynb  post_process_pixel.py  retinanet_helmet_vest.py  retinanet_tensorflow_trt.ipynb  ssd_object_detection_async.ipynb  ssd_object_detection_async_anuj.ipynb  super_resolution.ipynb  support_utility_openvino.py  test_retinanet.ipynb  testing_harcascades.ipynb  text_detection.ipynb
Notebooks/.ipynb_checkpoints/: async_videocapture-checkpoint.ipynb  attribute_detection_production-checkpoint.ipynb  cross_road_Testing-checkpoint.ipynb  distance measurement-checkpoint.ipynb  dynamic_batching-checkpoint.ipynb  generalized_calling_utility-checkpoint.ipynb  gulabjamun-checkpoint.ipynb  head_upper_body_detector-checkpoint.ipynb  helmet_vest_person_cropped-Copy1-checkpoint.ipynb  helmet_vest_person_cropped-checkpoint.ipynb  intersection functions CV-checkpoint.ipynb  (+11 more)
build_demos/: CMakeCache.txt
cpu_extension/: CMakeLists.txt
face_images/: generate_data.py
face_images_test/: faces_gallery.json
samples/: CMakeListsold.txt
samples/cpp/: CMakeLists.txt
(+94 files in other folders)
